--- a/templates/home.html
+++ b/templates/home.html
@@ -3,12 +3,9 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
-Hi {{ user.username }}!
-<p><a href="{% url 'logout' %}">Log Out</a></p>
-{% else %}
-<p>You are not logged in</p>
-<a href="{% url 'login' %}">Log In</a> |
-<a href="{% url 'signup' %}">Sign Up</a>
-{% endif %}
+Hello there,
+<br>
+Click to:
+<a href={% url 'file' %}>Upload/Search</a> PDF/PPT files
+
 {% endblock %}
