--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,1 @@
-{% extends 'base.html' %}
-
-{% block title %}Home{% endblock %}
-
-{% block content %}
-Hello there,
-<br>
-Click to:
-<a href={% url 'file' %}>Upload/Search</a> PDF/PPT files
-
-{% endblock %}
+{% extends "base.html" %}
