--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+  <h1>PDF/PPTX file uploader/searcher</h1>
+  <nav>
+    <ul>
+      <li>
+        <a href="{% url 'search' %}"><button>Search</button></a>
+      </li>
+      <br>
+      <li>
+        <a href="{% url 'upload' %}"><button>Upload</button></a>
+      </li>
+    </ul>
+  </nav>
+  <hr>
   <main>
     {% block content %}
     {% endblock %}
