--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,7 +6,7 @@
   {% csrf_token %}
   <!-- <input type="file" name="file" id="file">
   <input type="submit" value="Upload" name="submit"> -->
-  {# {{ form|as_p }} #}
-  <input type="submit" value="Upload" name="submit">
+  {{ form.as_p }}
+  <input type="submit" value="Upload">
 </form>
 {% endblock content %}
